cmake_minimum_required(VERSION 3.22)
project(logur VERSION 0.0.1 DESCRIPTION "lib for logging" LANGUAGES C)
include(GNUInstallDirs)

add_library(logur SHARED src/logur.c)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED TRUE)

set_target_properties(logur PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1 PUBLIC_HEADER api/logur.h)

target_include_directories(logur PRIVATE include)


install(TARGETS logur
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})


#install(FILES ${CMAKE_BINARY_DIR}/logur.pc
	#    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)


set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_GENERATOR "RPM")
set(CPACK_PACKAGE_NAME "liblogur")
set(CPACK_PACKAGE_RELEASE 1)
set(CPACK_PACKAGE_CONTACT "Donatas Vaytukaytis")
set(CPACK_PACKAGE_VENDOR "opusdv.online")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}")
include(CPack)
